--- a/docker-compose-redis.yml
+++ b/docker-compose-redis.yml
@@ -1,15 +1,15 @@
 version: '3.8'
 
 services:
-  redis-db:
+  redis:
     image: redis:6.2-alpine
     restart: always
     ports:
       - '6379:6379'
-    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    command: redis-server --save 20 1 --loglevel warning --requirepass password123
     volumes:
-      - redis-db:/data
+      - redis:/data
 
 volumes:
-  redis-db:
+  redis:
     driver: local
